--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Ogun6ele</a>.
+      Coded by <a href="https://github.com/Ogun6ele">Ogun6ele</a>.
     </p>
   </footer>
 </body>
